Changelog 5.1.0 (2022-05-24)
----------------------------
* Upgrading kotlin to 1.6.21
* Moved package io.restassured.assertion to io.restassured.internal.assertion since the classes in this package should be internal.
  Not all files have been moved yet, but refactoring will continue in the next release.
* Added support for Spring Framework 6.0 and Jakarta API's in Spring MockMvc module.

Changelog 5.0.1 (2022-04-06)
----------------------------
* Fixed so that with RestAssuredHttpBuilder no longer requires ResponseSpecificationImpl but rather a FilterableResponseSpecification

Changelog 5.0.0 (2022-03-25)
----------------------------
* Breaking change: REST Assured now builds on Groovy 4!
* Excluded example projects from rest assured bom file (issue 1546)
* Updated jackson from version 2.11.1 to 2.13.2 (issue 1555)

Changelog 4.5.1 (2022-02-11)
----------------------------
* Fixed a bug in ObjectMapper that required JAXB/JakartaEE when this was not intended (issue 1542)

Changelog 4.5.0 (2022-01-21)
----------------------------
* JAXB is now an optional dependency for XmlPath and is now longer required. Depend on 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.3' and 'com.sun.xml.bind:jaxb-impl:2.3.3'
* Implemented support for serializing and deserializing with Jakarta EE 8 and 9. To use it you need to have Jakarta EE on the classpath, for example by depending on 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1' and 'org.glassfish.jaxb:jaxb-runtime:3.0.2'.
* Upgraded groovy from 3.0.8 to 3.0.9 (thanks to sullis for pull request)
* Added support for adding multiple LogDetails to the RequestLoggingFilter. You can now do e.g.:

    given().filter(RequestLoggingFilter.with(LogDetail.METHOD, LogDetail.HEADERS, LogDetail.BODY)).when(). ..

  Thanks to lucasnguyen17 for pull request.
* Fix default implementation of deprecated method detachRoot (#1503) (thanks to Guillaume Boucherie for pull request)