@@ -1,3 +1,7 @@
+Changelog next-version
+----------------------
+* Added support for Spring Framework 6.0 in Spring WebClientTest module
+
 Changelog 5.1.0 (2022-05-24)
 ----------------------------
 * Upgrading kotlin to 1.6.21
